scrollbar style fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,30 @@ body {
   color: #fff;
 }
 
+/*
+ *  Scrollbar Style
+ */
+
+ body::-webkit-scrollbar-track
+ {
+  border-left: 1px solid #37332a;
+  border-radius: 0px;
+  background-color: #0c0b09;
+ }
+ 
+ body::-webkit-scrollbar
+ {
+  width: 5px;
+  background-color: #00000000;
+ }
+ 
+ body::-webkit-scrollbar-thumb
+ {
+  -webkit-box-shadow: inset 3px 0 0px rgb(149 117 205);
+  background-color: #9575cd00;
+ }
+ 
+
 a {
   color: #7e57c2;
   text-decoration: none;
